# rust-crud-api

./: Cargo.toml  ec-private.pem
src/: controllers.rs  handler.rs  lib.rs  main.rs  models.rs  note_models.rs  routes.rs  server.rs  start_server.rs
src/api/: controllers.rs  routes.rs
src/config/: db.rs
src/controller/: notes.rs  users.rs
src/db/: db.rs  mongodb.rs
src/middleware/: auth.rs  jwt.rs  middleware.rs
src/models/: mod.rs  users.rs
src/routes/: notes.rs  users.rs
