[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
bson = "2.9.0"

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]
tokio = { version = "1", features = ["full"] }